--- a/style.css
+++ b/style.css
@@ -4,47 +4,47 @@ body {
     color: #333;
     font-family: Lato, sans-serif;
 }
-.aaa {
+.img-container {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
 }
-.aaa img {
+.img-container__img {
     width: 100%;
 }
-.aaa .more_inf {
+.img-container__info {
     font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.aaa { text-align: center;
+.img-container { text-align: center;
 }
 }
-.centered-main-page-element {
+.main {
     display: block;
     width: 500px;
     margin: 0 auto 0;
 }
-.task {
+.main__input-task {
     width: 56%;
     display: inline-block;
     flex-grow: 1
 }
-.task-row-wrapper {
+.main__row {
     display: flex;
 }
-ul {
+.main__list {
     margin:0;
     padding: 0px;
 }
-li, h3 {
+.main__item, .main__heading {
     list-style:none;
 }
-input,button{
+.main__input, .main__btn{
     outline:none;
 }
-button {
+.main__btn {
     background: none;
     border: 0px;
     color: #888;
@@ -53,12 +53,11 @@ button {
     font-family: Lato, sans-serif;
     cursor: pointer;
 }
-button:hover {
+.main__btn:hover {
     color: #3a3A3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.main__heading, .main__label[for='new-task'] {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -67,7 +66,7 @@ label[for="new-task"] {
     margin: 0;
     text-transform: uppercase;
 }
-input[type="text"] {
+.main__input[type="text"] {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
@@ -79,21 +78,21 @@ input[type="text"] {
     font-family: Lato, sans-serif;
     color: #888;
 }
-input[type="text"]:focus {
+.main__input[type="text"]:focus {
     color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.main__label[for='new-task'] {
     display: block;
     margin: 0 0 20px;
 }
-input#new-task {
+.main__input#new-task {
     width: 318px;
 }
 
 /* Task list */
-li {
+.main__item {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
@@ -102,47 +101,47 @@ li {
     justify-content: space-between;
     align-items: center;
 }
-li > * {
+.main__item > * {
     vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.main__item > .main__checkbox {
     margin: 0 10px;
 }
-li > label {
+.main__item > .main__label-task {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
-li >    input[type="text"] {
+.main__item > .main__input-task {
     width: 226px
 }
-button.delete img {
+.main__btn-delete img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.main__btn-delete img:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
-    text-decoration: line-through
+.main__list#tasks-complete .main__label-task {
+    text-decoration: line-through;
     color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.main__item .main__input-task {
     display:none
 }
 
-ul li.editMode input[type=text] {
+.main__item.main__item--edit .main__input-task {
     display:inline-block;
     width:224px
 }
 
-ul li.editMode label {
+.main__item.main__item--edit .main__label-task {
     display:none;
 }
