--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 
 @media (max-width:768px) {
   .img-container { 
-  text-align: center;
+    text-align: center;
 }
 }
 .main {
@@ -30,7 +30,7 @@ body {
 .main__input-task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .main__row {
   display: flex;
@@ -115,7 +115,7 @@ body {
   width: 226px;
 }
 .main__item > .main__input-task {
-  width: 226px
+  width: 226px;
 }
 .main__btn-delete img {
   height: 2em;
@@ -134,12 +134,12 @@ body {
 
 /* Edit Task */
 .main__item .main__input-task {
-  display: none
+  display: none;
 }
 
 .main__item.main__item--edit .main__input-task {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .main__item.main__item--edit .main__label-task {
