--- a/style.css
+++ b/style.css
@@ -39,10 +39,12 @@ body {
   margin: 0;
   padding: 0px;
 }
-.main__item, .main__heading {
+.main__item, 
+.main__heading {
   list-style: none;
 }
-.main__input, .main__btn{
+.main__input, 
+.main__btn{
   outline: none;
 }
 .main__btn {
@@ -58,7 +60,8 @@ body {
   color: #3a3A3a;
 }
 /* Heading */
-.main__heading, .main__label[for='new-task'] {
+.main__heading, 
+.main__label[for='new-task'] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
